config/sample_yaml/da-elasticsearch.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: da-elasticsearch
 namespace: devopsart
spec:
 replicas: 1
 template:
  metadata:
   labels:
    app: da-elasticsearch
  spec:
   containers:
   - name: da-elasticsearch
     image: 192.168.1.120:5000/devopsart-elasticsearch-6.6-ubu-v1.2:latest
     imagePullPolicy: Always
     command: [ "/bin/bash", "-c", "--" ]
     args: [ "while true; do sleep 30; done;" ]
     command: [ "/bin/bash", "-c", "--" ]
     args: [ "while true; do monit;sleep 30; done;" ]
     ports:
     - containerPort: 9200
     volumeMounts:
       - name: hostvol
         mountPath: /var/lib/elasticsearch
     securityContext:
       allowPrivilegeEscalation: false
   volumes:
     - name: hostvol
       hostPath:
         path: /opt/elasticsearch
