config/sample_yaml/da-logstash.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: da-logstash
 namespace: devopsart
spec:
 replicas: 1
 template:
  metadata:
   labels:
    app: da-logstash
  spec:
   containers:
   - name: da-logstash
     image: 192.168.1.120:5000/devopsart-logstash-ubu-v1.3:latest
     imagePullPolicy: Always
     command: [ "/bin/bash", "-c", "--" ]
     args: [ "while true; do sleep 30; done;" ]
     command: [ "/bin/bash", "-c", "--" ]
     args: [ "while true; do monit;sleep 10; done;" ]
     ports:
     - containerPort: 5043
