config/sample_yaml/da-kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: da-kibana-svc
  namespace: devopsart
  labels:
    run: da-kibana-svc
spec:
  type: ClusterIP
  ports:
  - port: 5601
    protocol: TCP
  selector:
    app: da-kibana
