config/sample_yaml/da-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: da-ingress
  namespace: devopsart
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - dashboard.devopsart.com
    secretName: devopsart-ssl-secret
  - hosts:
    - provision.devopsart.com
    secretName: devopsart-ssl-secret
  - hosts:
    - dashboard1.devopsart.com
    secretName: devopsart-ssl-secret
  - hosts:
    - report.devopsart.com
    secretName: devopsart-ssl-secret
  - hosts:
    - node.devopsart.com
    secretName: devopsart-ssl-secret
  - hosts:
    - kibana.devopsart.com
    secretName: devopsart-ssl-secret  
  rules:
  - host: dashboard.devopsart.com
    http:
      paths:
      - backend:
          serviceName: da-dashboard-v8-svc
          servicePort: 80
  - host: provision.devopsart.com
    http:
      paths:
      - backend:
          serviceName: da-provision-svc
          servicePort: 80
  - host: dashboard1.devopsart.com
    http:
      paths:
      - backend:
          serviceName: da-dashboard-v5-v6-svc
          servicePort: 80
  - host: report.devopsart.com
    http:
      paths:
      - backend:
          serviceName: da-report-svc
          servicePort: 80
  - host: kibana.devopsart.com
    http:
      paths:
      - backend:
          serviceName: da-kibana-svc
          servicePort: 5601
  - host: node.devopsart.com
    http:
      paths:
      - backend:
          serviceName: da-noderedis-svc
          servicePort: 443
